new StringVec pseudo-type

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -11,5 +11,6 @@ set(BACKEND_SOURCE_FILES
     backend/src/lexer.cpp
     backend/src/parser.cpp
     backend/src/preprocessor.cpp
+    backend/src/stringvec.cpp
     PARENT_SCOPE
 )
