--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,4 +57,4 @@ jobs:
         mkdir build
         cd build
         cmake -G "Visual Studio 16 2019" .. -A Win32
-        cmake --build . --config $BUILD_TYPE
+        cmake --build .
