--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -49,8 +49,8 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v1
+    # - name: Autobuild
+    #   uses: github/codeql-action/autobuild@v1
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
@@ -62,6 +62,23 @@ jobs:
     #- run: |
     #   make bootstrap
     #   make release
+
+    - name: Setup environment
+      shell: bash
+      run: |
+        sudo apt update
+        sudo apt-get install g++-9
+    
+    - name: Build
+      shell: bash
+      run: |
+        mkdir build
+        cd build
+        cmake ..
+        cmake --build . --config $BUILD_TYPE
+      env:
+        CC: gcc-9
+        CXX: g++-9
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
